--- a/.github/workflows/deploy-on-merge-to-main.yml
+++ b/.github/workflows/deploy-on-merge-to-main.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 
-
 jobs:
 
   deploy:
@@ -21,12 +20,8 @@ jobs:
       - name: Set Fly secrets
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_SEARCH_LLM_TOKEN }}
-          GOOGLE_GENAI_API_KEY: ${{ secrets.GOOGLE_GENAI_API_KEY }}
-          SERVICE_CRED: ${{ secrets.SERVICE_CRED }}
         run: |
-          flyctl secrets set --stage --app "yral-icpumpsearch" "SERVICE_CRED=${{ secrets.SERVICE_CRED }}"
-          flyctl secrets set --stage --app "yral-icpumpsearch" "GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }}"
+          flyctl secrets set --stage --app "yral-icpumpsearch" SERVICE_CRED=${{ secrets.SERVICE_CRED }}
+          flyctl secrets set --stage --app "yral-icpumpsearch" GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }}
       - name: Deploy a docker container to fly.io
         run: flyctl deploy --remote-only
-
-        
