adding search -- first commit

--- a/.github/workflows/deploy-on-merge-to-main.yml
+++ b/.github/workflows/deploy-on-merge-to-main.yml
@@ -19,9 +19,11 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Set Fly secrets
         run: |
-          flyctl secrets set --stage --app "yral-icpumpsearch" "SERVICE_CRED=${{ secrets.SERVICE_CRED }}"
-          flyctl secrets set --stage --app "yral-icpumpsearch" "GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }}"
+          flyctl secrets set --stage --app "yral-icpumpsearch" "SERVICE_CRED=$SERVICE_CRED"
+          flyctl secrets set --stage --app "yral-icpumpsearch" "GOOGLE_GENAI_API_KEY=$GOOGLE_GENAI_API_KEY"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_SEARCH_LLM_TOKEN }}
+          SERVICE_CRED: ${{ secrets.SERVICE_CRED }}
+          GOOGLE_GENAI_API_KEY: ${{ secrets.GOOGLE_GENAI_API_KEY }}
       - name: Deploy a docker container to fly.io
         run: flyctl deploy --remote-only
