--- a/.github/workflows/deploy-on-merge-to-main.yml
+++ b/.github/workflows/deploy-on-merge-to-main.yml
@@ -19,13 +19,13 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Set Fly secrets
         run: |
-          flyctl secrets set --stage --app "yral-icpumpsearch" "SERVICE_CRED=$SERVICE_CRED"
-          flyctl secrets set --stage --app "yral-icpumpsearch" "GOOGLE_GENAI_API_KEY=$GOOGLE_GENAI_API_KEY"
+          flyctl secrets set --stage --app "prod-yral-icpumpsearch" "SERVICE_CRED=$(jq -n -c "${SERVICE_CRED}")"
+          flyctl secrets set --stage --app "prod-yral-icpumpsearch" "GOOGLE_GENAI_API_KEY=$(jq -n -c "${GOOGLE_GENAI_API_KEY}")"
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_SEARCH_LLM_TOKEN }}
-          SERVICE_CRED: ${{ secrets.SERVICE_CRED }}
+          FLY_API_TOKEN: ${{ secrets.FLY_IO_DEPLOY_TOKEN }}
+          SERVICE_CRED: ${{ secrets.GOOGLE_CLOUD_EVENTS_BQ_SERVICE_ACCOUNT_KEY_JSON }}
           GOOGLE_GENAI_API_KEY: ${{ secrets.GOOGLE_GENAI_API_KEY }}
       - name: Deploy a docker container to fly.io
         run: flyctl deploy --remote-only
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_SEARCH_LLM_TOKEN }}
+          FLY_API_TOKEN: ${{ secrets.FLY_IO_DEPLOY_TOKEN }}
