--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ google-cloud-core==2.4.1
 google-crc32c==1.5.0
 google-resumable-media==2.7.1
 googleapis-common-protos==1.63.2
-grpcio
-grpcio-tools
-grpcio-status
+grpcio==1.67.1
+grpcio-tools==1.67.1
+grpcio-status==1.67.1
 idna==3.7
 packaging==24.1
 proto-plus==1.24.0
